# AI-Resume-Parser

./: .gitignore  __init__.py
Services/: __init__.py  configParserService.py  extractInfo.py
Services/Faiss/: faissStuff.py
backend/: .gitignore  pyproject.toml
backend/data/resume_info/: resume_info.csv
backend/parser/: config.py  extract_info.py  job_description.py  main.py  prompts.py  services.py
backend/parser/api/: api.py
backend/parser/ingestion/: db_operations.py  file_operations.py  main.py
backend/parser/ingestion/vdb/: embedding_utils.py  ingest.py
backend/parser/vdb/: embedding_utils.py  ingest.py  loaders.py
backend/redundent/: extract_info.py
frontend/src/: App.jsx
frontend/src/containers/: UploadedResumes.jsx  filetest.jsx  testComp.jsx
frontend/src/containers/components/: FileTile.jsx
index_store/: index.faiss  index.pkl
pages/: jobDescription.py
