[tool.poetry]
name = "parser"
version = "0.1.0"
description = ""
authors = ["Aayush Kapoor"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "3.9.3"
aiosignal = "1.3.1"
annotated-types = "0.6.0"
anyio = "4.2.0"
attrs = "23.2.0"
build = "1.1.1"
CacheControl = "0.14.0"
certifi = "2024.2.2"
cfgv = "3.4.0"
charset-normalizer = "3.3.2"
cleo = "2.1.0"
click = "8.1.7"
colorama = "0.4.6"
crashtest = "0.4.1"
dataclasses-json = "0.6.4"
distlib = "0.3.8"
distro = "1.9.0"
dnspython = "2.6.1"
dulwich = "0.21.7"
email_validator = "2.1.1"
fastapi = "0.110.0"
fastjsonschema = "2.19.1"
filelock = "3.13.1"
frozenlist = "1.4.1"
fsspec = "2024.2.0"
greenlet = "3.0.3"
h11 = "0.14.0"
httpcore = "1.0.2"
httptools = "0.6.1"
httpx = "0.26.0"
huggingface-hub = "0.20.3"
identify = "2.5.34"
idna = "3.6"
importlib-metadata = "7.0.1"
installer = "0.7.0"
itsdangerous = "2.1.2"
Jinja2 = "3.1.3"
jsonpatch = "1.33"
jsonpointer = "2.4"
keyring = "24.3.1"
langchain = "0.1.10"
langchain-community = "0.0.25"
langchain-core = "0.1.28"
langsmith = "0.1.13"
logging = "0.4.9.6"
MarkupSafe = "2.1.5"
marshmallow = "3.21.0"
more-itertools = "10.2.0"
msgpack = "1.0.8"
multidict = "6.0.5"
mypy-extensions = "1.0.0"
nodeenv = "1.8.0"
numpy = "1.26.4"
openai = "1.10.0"
orjson = "3.9.15"
packaging = "23.2"
pexpect = "4.9.0"
pip = "24.0"
pkginfo = "1.10.0"
platformdirs = "4.2.0"
poetry = "1.8.2"
poetry-core = "1.9.0"
poetry-plugin-export = "1.6.0"
pre-commit = "3.6.1"
psycopg2 = "2.9.9"
ptyprocess = "0.7.0"
pydantic = "2.6.1"
pydantic_core = "2.16.2"
pydantic-extra-types = "2.6.0"
pydantic-settings = "2.2.1"
PyPDF2 = "3.0.1"
pyproject_hooks = "1.0.0"
python-dotenv = "1.0.1"
python-multipart = "0.0.9"
pywin32-ctypes = "0.2.2"
PyYAML = "6.0.1"
rapidfuzz = "3.6.1"
regex = "2023.12.25"
requests = "2.31.0"
requests-toolbelt = "1.0.0"
safetensors = "0.4.2"
setuptools = "65.5.0"
shellingham = "1.5.4"
sniffio = "1.3.0"
SQLAlchemy = "2.0.27"
starlette = "0.36.3"
tenacity = "8.2.3"
tokenizers = "0.15.1"
tomlkit = "0.12.4"
tqdm = "4.66.1"
transformers = "4.37.2"
trove-classifiers = "2024.3.3"
typing_extensions = "4.9.0"
typing-inspect = "0.9.0"
ujson = "5.9.0"
urllib3 = "2.2.0"
uvicorn = "0.27.1"
virtualenv = "20.25.0"
watchfiles = "0.21.0"
websockets = "12.0"
yarl = "1.9.4"
zipp = "3.17.0"
sentence-transformers = "^2.5.1"
pypdf = "^4.1.0"
pgvector = "^0.2.5"
docx2txt = "^0.8"
langchain-openai = "^0.0.8"
pandas = "^2.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
run_api = "parser.api.api:start"

